--- a/Day39_yolov3_keras_HW.ipynb
+++ b/Day39_yolov3_keras_HW.ipynb
@@ -353,7 +353,7 @@
         "\n",
         "        end = timer()\n",
         "        print(end - start)\n",
-        "        return image , left, box, score, label# Hint: 在這裡更改程式碼即可\n",
+        "        return image , out_boxes, out_scores, out_classes  # Hint: 在這裡更改程式碼即可\n",
         "\n",
         "    def close_session(self):\n",
         "        self.sess.close()"
